// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post Comment should open created replies 1`] = `
<DocumentFragment>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm w-full mb-4"
  >
    <div
      class="p-6 pt-4"
    >
      <div
        class="flex items-center mb-4"
      >
        <a
          class="flex items-center gap-2"
          href="/profile/0"
        >
          <span
            class="relative flex h-10 w-10 shrink-0 overflow-hidden rounded-full"
          >
            <span
              class="flex h-full w-full items-center justify-center rounded-full bg-muted"
            />
          </span>
          <div>
            <p
              class="text-sm font-medium"
            />
          </div>
        </a>
      </div>
      <p
        class="mb-4 break-words"
      />
      <div
        class="flex items-center space-x-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
          data-testid="reply-button"
        >
          <svg
            class="lucide lucide-message-circle w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
            />
          </svg>
          Cancel
        </button>
        <button
          aria-controls="replies-0"
          aria-expanded="true"
          class="justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3 flex items-center"
          data-testid="open-replies-button"
        >
          <svg
            class="lucide lucide-chevron-down w-4 h-4 mr-2 transition-transform duration-200 rotate-180"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
          Hide Replies (1)
        </button>
      </div>
      <form
        class="mt-4"
      >
        <textarea
          class="flex w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm min-h-[100px] mb-2"
          data-testid="comment-form"
          placeholder="Write your reply..."
        />
        <div
          class="mt-4 flex justify-end space-x-2"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
            data-testid="comment-form-button-cancel"
            type="button"
          >
            Cancel
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3"
            data-testid="comment-form-button-submit"
          >
            Submit Message
          </button>
        </div>
      </form>
    </div>
    <div
      class="p-6 flex flex-col items-start pt-0"
      data-testid="replies"
    >
      <div
        class="w-full transition-all duration-300 ease-in-out max-h-full opacity-100"
        id="replies-0"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Reply should call create function 1`] = `
<DocumentFragment>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm w-full mb-4"
  >
    <div
      class="p-6 pt-4"
    >
      <div
        class="flex items-center mb-4"
      >
        <div
          class="w-10 h-10 bg-gray-200 rounded-full mr-3"
        />
        <div>
          <h3
            class="font-semibold"
          />
          <p
            class="text-sm text-muted-foreground flex items-center"
          >
            <svg
              class="lucide lucide-calendar w-4 h-4 mr-1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
            </svg>
            08/07/2025
          </p>
        </div>
      </div>
      <p
        class="mb-4"
      />
      <div
        class="flex items-center space-x-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
          data-testid="reply-button"
        >
          <svg
            class="lucide lucide-message-circle w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
            />
          </svg>
          Cancel
        </button>
      </div>
      <form
        class="mt-4"
      >
        <textarea
          class="flex w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm min-h-[100px] mb-2"
          data-testid="comment-form"
          placeholder="Write your reply..."
        />
        <div
          class="mt-4 flex justify-end space-x-2"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
            data-testid="comment-form-button-cancel"
            type="button"
          >
            Cancel
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3"
            data-testid="comment-form-button-submit"
          >
            Submit Message
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Reply should display provided responded comment 1`] = `
<DocumentFragment>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm w-full mb-4"
  >
    <div
      class="mb-2 p-2 bg-muted rounded-md text-sm"
      data-testid="responded-comment"
    >
      <div
        class="flex items-center mb-1"
      >
        <svg
          class="lucide lucide-corner-down-right w-4 h-4 mr-2"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="15 10 20 15 15 20"
          />
          <path
            d="M4 4v7a4 4 0 0 0 4 4h12"
          />
        </svg>
        <span
          class="font-semibold"
        />
      </div>
      <p
        class="text-muted-foreground line-clamp-2 break-words"
      />
    </div>
    <div
      class="p-6 pt-4"
    >
      <div
        class="flex items-center mb-4"
      >
        <div
          class="w-10 h-10 bg-gray-200 rounded-full mr-3"
        />
        <div>
          <h3
            class="font-semibold"
          />
          <p
            class="text-sm text-muted-foreground flex items-center"
          >
            <svg
              class="lucide lucide-calendar w-4 h-4 mr-1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
            </svg>
            08/07/2025
          </p>
        </div>
      </div>
      <p
        class="mb-4"
      />
      <div
        class="flex items-center space-x-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
          data-testid="reply-button"
        >
          <svg
            class="lucide lucide-message-circle w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
            />
          </svg>
          Reply
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Reply should not display unprovided responded comment 1`] = `
<DocumentFragment>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm w-full mb-4"
  >
    <div
      class="p-6 pt-4"
    >
      <div
        class="flex items-center mb-4"
      >
        <div
          class="w-10 h-10 bg-gray-200 rounded-full mr-3"
        />
        <div>
          <h3
            class="font-semibold"
          />
          <p
            class="text-sm text-muted-foreground flex items-center"
          >
            <svg
              class="lucide lucide-calendar w-4 h-4 mr-1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
            </svg>
            08/07/2025
          </p>
        </div>
      </div>
      <p
        class="mb-4"
      />
      <div
        class="flex items-center space-x-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
          data-testid="reply-button"
        >
          <svg
            class="lucide lucide-message-circle w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
            />
          </svg>
          Reply
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Reply should open created replies 1`] = `
<DocumentFragment>
  <div
    class="rounded-lg border bg-card text-card-foreground shadow-sm w-full mb-4"
  >
    <div
      class="p-6 pt-4"
    >
      <div
        class="flex items-center mb-4"
      >
        <div
          class="w-10 h-10 bg-gray-200 rounded-full mr-3"
        />
        <div>
          <h3
            class="font-semibold"
          />
          <p
            class="text-sm text-muted-foreground flex items-center"
          >
            <svg
              class="lucide lucide-calendar w-4 h-4 mr-1"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2v4"
              />
              <path
                d="M16 2v4"
              />
              <rect
                height="18"
                rx="2"
                width="18"
                x="3"
                y="4"
              />
              <path
                d="M3 10h18"
              />
            </svg>
            08/07/2025
          </p>
        </div>
      </div>
      <p
        class="mb-4"
      />
      <div
        class="flex items-center space-x-2"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
          data-testid="reply-button"
        >
          <svg
            class="lucide lucide-message-circle w-4 h-4 mr-2"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
            />
          </svg>
          Cancel
        </button>
      </div>
      <form
        class="mt-4"
      >
        <textarea
          class="flex w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm min-h-[100px] mb-2"
          data-testid="comment-form"
          placeholder="Write your reply..."
        />
        <div
          class="mt-4 flex justify-end space-x-2"
        >
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
            data-testid="comment-form-button-cancel"
            type="button"
          >
            Cancel
          </button>
          <button
            class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3"
            data-testid="comment-form-button-submit"
          >
            Submit Message
          </button>
        </div>
      </form>
    </div>
  </div>
</DocumentFragment>
`;
